k8s/notifier.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifier
  namespace: ${PROJECT_NAME}
spec:
  selector:
    matchLabels:
      app: notifier
  replicas: 1
  template:
    metadata:
      labels:
        app: notifier
    spec:
      containers:
      - name: notifier
        image: ${DOCKER_REGISTRY}/${PROJECT_NAME}-notifier:${TAG}
