k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ${PROJECT_NAME}
spec:
  selector:
    matchLabels:
      app: api
  replicas: 1
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ${DOCKER_REGISTRY}/${PROJECT_NAME}-api:${TAG}
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: nfs-storage
          mountPath: /nfs_data
      imagePullSecrets:
      - name: dockerhub-secret
      volumes:
      - name: nfs-storage
        persistentVolumeClaim:
          claimName: nfs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: ${PROJECT_NAME}
spec:
  selector:
    app: api
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
